--- a/src/AppButtonBar.scss
+++ b/src/AppButtonBar.scss
@@ -4,13 +4,13 @@ ul.app-button-bar.bottom {
     left: 0;
     margin: 0;
     width: 100vw;
-    height: 60px;
+    height: 46px;
     background-color: white;
 
     li {
-        width: 33.3%;
+        width: 30%;
         float: left;
         list-style: none;
-        font-size: 40px;
+        font-size: 30px;
     }
 }
